--- a/figures.ipynb
+++ b/figures.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,7 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "from scipy.integrate import quad\n",
     "%matplotlib inline"
    ]
   },
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "hide_input": false
    },
@@ -1798,24 +1799,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8331053797184165 1.2558574607014708\n"
+     ]
+    }
+   ],
    "source": [
-    "# Transformed signal variance calculation\n",
-    "# sigmoid function y = 2*(2/(1+e^{-x})-1) , where x~N(0, sigma^2)\n",
-    "# Thus y probability distribution P(y) = 1/(sqrt(2*pi)*sigma)*4/(4-y^2)^e^(-0.5*(ln(4/(2+y)-1))^2/sigma^2),\n",
-    "# where y![-2,2]\n",
-    "# expected value of y E(y) = NIntegrate(yP(y),{y,-2,2})\n",
-    "# variance var(y) = NIntegrate((y-E(y))^2P(y), {y,-2,2})\n",
-    "# when sigma = 2, trandformed variance equals:\n",
-    "std_2_tf = math.sqrt(1.586)\n",
-    "std_1_tf = math.sqrt(0.698)"
+    "#Transformed signal variance calculation\\n\",\n",
+    "#sigmoid function t = m+L*(2/(1+e^{-x})-1) , where x~N(mu, sigma^2), L=2, t~[m-L,m+L], y=t-m\\n\",\n",
+    "# Thus y probability distribution P(y) = 1/(sqrt(2*pi)*sigma) * 4/(4-(y-m)^2) * e^(-0.5*(m-mu-ln(4/(2+(y-m))-1))^2/sigma^2),\\n\",\n",
+    "# where y~[m-2,m+2], cause m is unknow and eventually converges to mu, here set m=mu\\n\",\n",
+    "# expected value of y E(y) = NIntegrate(yP(y),{y,-2,2})\\n\",# Transformed signal variance calculation\n",
+    "# variance var(y) = NIntegrate(y^2P(y)-E(y)^2, {y,-2,2})\\n\",\n",
+    "def transformed_std(m,sigma):\n",
+    "\tfirstmom = quad(lambda t: t*4/(math.sqrt(2*math.pi)*sigma*(4-(t-m)**2))*math.exp(-\n",
+    "\t\t\t\t\t(math.log(4/(2+(t-m))-1))**2/(2*sigma**2)),-2,2)[0]\n",
+    "\tsecondmom = quad(lambda t: t**2*4/(math.sqrt(2*math.pi)*sigma*(4-(t-m)**2))*math.exp(-\n",
+    "\t\t\t\t\t\t(math.log(4/(2+(t-m))-1))**2/(2*sigma**2)),-2,2)[0]\n",
+    "\treturn(math.sqrt(secondmom-firstmom**2))\n",
+    "# calculate (mu,sigma)=(0,1) and (0,2) which are used in following Figure s3, s4 \\n\",\n",
+    "std_2_tf = transformed_std(0,2) \n",
+    "std_1_tf = transformed_std(0,1) \n",
+    "print(std_1_tf,std_2_tf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "hide_input": true
    },
@@ -1999,7 +2015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "hide_input": true
    },
@@ -2133,7 +2149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.1"
   },
   "toc": {
    "base_numbering": 1,
